--- a/CoolBlue/Vendors.xaml
+++ b/CoolBlue/Vendors.xaml
@@ -18,11 +18,11 @@
     <DockPanel LastChildFill="True" DataContext="{StaticResource uSP_getAllVendorsViewSource}">
         <dxr:RibbonControl DockPanel.Dock="Top" RibbonStyle="Office2010">
             <dxr:RibbonDefaultPageCategory>
-                <dxr:RibbonPage Caption="ribbonPage1">
-                    <dxr:RibbonPageGroup>
+                <dxr:RibbonPage Caption="">
+                    <dxr:RibbonPageGroup Caption="">
                         <dxb:BarButtonItem Content="Vendor Details" ItemClick="BarButtonItem_ItemClick" Glyph="{dx:DXImage Image=EditName_32x32.png}" LargeGlyph="{dx:DXImage Image=EditName_32x32.png}"/>
                     </dxr:RibbonPageGroup>
-                    <dxr:RibbonPageGroup>
+                    <dxr:RibbonPageGroup Caption="">
                         <dxb:BarButtonItem Content="New Vendor" ItemClick="BarButtonItem_ItemClick_1" Glyph="{dx:DXImage Image=Insert_32x32.png}" LargeGlyph="{dx:DXImage Image=Insert_32x32.png}"/>
                     </dxr:RibbonPageGroup>
                 </dxr:RibbonPage>
