--- a/CoolBlue/Tags.xaml
+++ b/CoolBlue/Tags.xaml
@@ -16,8 +16,9 @@
     <DockPanel LastChildFill="True" DataContext="{StaticResource uSP_getAllTagsViewSource}">
         <dxr:RibbonControl DockPanel.Dock="Top" RibbonStyle="Office2010">
             <dxr:RibbonDefaultPageCategory>
-                <dxr:RibbonPage Caption="ribbonPage1">
-                    <dxr:RibbonPageGroup Caption="ribbonPageGroup1"/>
+                <dxr:RibbonPage Caption="">
+                    <dxr:RibbonPageGroup Caption="
+                                         "/>
                 </dxr:RibbonPage>
             </dxr:RibbonDefaultPageCategory>
         </dxr:RibbonControl>
