--- a/CoolBlue/editVendor.xaml
+++ b/CoolBlue/editVendor.xaml
@@ -16,9 +16,9 @@
     <DockPanel LastChildFill="True" DataContext="{StaticResource uSP_getOneVendorViewSource}">
         <dxr:RibbonControl DockPanel.Dock="Top" RibbonStyle="Office2010">
             <dxr:RibbonDefaultPageCategory>
-                <dxr:RibbonPage Caption="ribbonPage1">
+                <dxr:RibbonPage Caption="">
                     <dxr:RibbonPageGroup Caption="">
-                        <dxb:BarButtonItem Content="Save Changes" ItemClick="BarButtonItem_ItemClick" Glyph="{dx:DXImage Image=Save_32x32.png}" LargeGlyph="{dx:DXImage Image=Save_32x32.png}"/>
+                        <dxb:BarButtonItem Content="Save" ItemClick="BarButtonItem_ItemClick" Glyph="{dx:DXImage Image=Save_32x32.png}" LargeGlyph="{dx:DXImage Image=Save_32x32.png}"/>
                     </dxr:RibbonPageGroup>
                 </dxr:RibbonPage>
             </dxr:RibbonDefaultPageCategory>
