--- a/CoolBlue/editCat.xaml
+++ b/CoolBlue/editCat.xaml
@@ -16,7 +16,7 @@
     <DockPanel LastChildFill="True">
         <dxr:RibbonControl DockPanel.Dock="Top" RibbonStyle="Office2010">
             <dxr:RibbonDefaultPageCategory>
-                <dxr:RibbonPage Caption="ribbonPage1">
+                <dxr:RibbonPage Caption="">
                     <dxr:RibbonPageGroup Caption="">
                         <dxb:BarButtonItem Content="Save" Glyph="{dx:DXImage Image=Save_32x32.png}" LargeGlyph="{dx:DXImage Image=Save_32x32.png}"  ItemClick="BarButtonItem_ItemClick"/>
                     </dxr:RibbonPageGroup>
