--- a/CoolBlue/MainWindow.xaml
+++ b/CoolBlue/MainWindow.xaml
@@ -124,9 +124,11 @@
                 <dxb:BarButtonItemLink/>
             </dxr:RibbonControl.ToolbarItems>
             <dxr:RibbonDefaultPageCategory>
-                <!--<dxr:RibbonPage Caption="Home">
-                    <dxr:RibbonPageGroup Caption="File">
-                        <dxb:BarButtonItem x:Name="newItem" Content="New" Glyph="{dx:DXImage Image=New_16x16.png}" LargeGlyph="{dx:DXImage Image=New_32x32.png}"/>
+                
+                
+                <dxr:RibbonPage Caption="Home">
+                    <dxr:RibbonPageGroup Caption="">
+                        <dxb:BarButtonItem x:Name="Exit" Content="Exit" Glyph="{dx:DXImage Image=New_16x16.png}" LargeGlyph="{dx:DXImage Image=New_32x32.png}" ItemClick="Exit_ItemClick"/>
                         <dxb:BarItemSeparator/>
                         <dxr:BarButtonGroup x:Name="editorGroup">
                             <dxb:BarEditItem x:Name="editItem" EditSettings="{dxe:ComboBoxSettings}" EditWidth="80"/>
@@ -139,7 +141,7 @@
                         <dxb:BarItemSeparator/>
                         <dxb:BarButtonItem x:Name="saveAsItem" Content="Save As" LargeGlyph="{dx:DXImage Image=SaveAs_32x32.png}"/>
                     </dxr:RibbonPageGroup>
-                </dxr:RibbonPage>-->
+                </dxr:RibbonPage>
 
 
                 <dxr:RibbonPage Caption="Lists">
@@ -326,7 +328,7 @@
                                ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" 
                                ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" 
                                ShowValidationAttributeErrors="False" ShowVerticalLines="False"
-                               CustomCellAppearance="TableView_OnCustomCellAppearance">
+                               CustomCellAppearance="TableView_OnCustomCellAppearance" FocusedRowChanged="TableView_FocusedRowChanged" ValidateRow="TableView_ValidateRow">
 
                     <dxg:TableView.FormatConditions>
                         <dxg:FormatCondition Expression="[Id] % 2 == 0" FieldName="Id">
@@ -925,7 +927,6 @@
         <ComboBox Grid.Column="2" Margin="0,0,10,0" Grid.Row="2" IsSynchronizedWithCurrentItem = "True" SelectedItem="" DisplayMemberPath="cName" ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
         <dx:SimpleButton Content="New Line" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="42,38,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" Click="SimpleButton_Click_1" RenderTransformOrigin="-1.733,0.444"/>
         <dx:SimpleButton x:Name="btnSaveConfig" Content="Save Config" Grid.Column="4" HorizontalAlignment="Left" Height="34" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="85" Click="btnSaveConfig_Click" Grid.ColumnSpan="2"/>
-        <dx:SimpleButton Content="Update Line" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="154,38,0,0" Grid.Row="2" VerticalAlignment="Top" Width="100" Click="SimpleButton_Click_2"/>
         <dxe:TextEdit x:Name="TextEditTotalDr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
         <dxe:TextEdit x:Name="TextEditTotalCr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="252,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
         <dxe:TextEdit x:Name="TextEditBalance" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="336,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="100" Mask="F" MaskType="Numeric" FontWeight="Normal" Padding="0,0,5,0" Background="Black" Foreground="White"/>
