--- a/CoolBlue/MainWindow.xaml
+++ b/CoolBlue/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="CoolBlue" Height="1000" Width="1900" Loaded="DXRibbonWindow_Loaded" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF404383" Opacity="0.98" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
     <dxr:DXRibbonWindow.Resources>
 
-        
+
         <!--<Style x:Key="SelectedRowStyle" TargetType="{x:Type dxg:RowControl}">
             <Style.Triggers>
                 <DataTrigger Binding="{Binding Path=IsSelected}" Value="True">
@@ -124,8 +124,8 @@
                 <dxb:BarButtonItemLink/>
             </dxr:RibbonControl.ToolbarItems>
             <dxr:RibbonDefaultPageCategory>
-                
-                
+
+
                 <dxr:RibbonPage Caption="Home">
                     <dxr:RibbonPageGroup Caption="">
                         <dxb:BarButtonItem x:Name="Exit" Content="Exit" Glyph="{dx:DXImage Image=New_16x16.png}" LargeGlyph="{dx:DXImage Image=New_32x32.png}" ItemClick="Exit_ItemClick"/>
@@ -312,9 +312,22 @@
                 </dxg:TableView>
 
             </dxg:GridControl.View>
-            <dxg:GridColumn Binding="{Binding cName}"  FieldName="Name" Header="Name" Width="200" />
-            <dxg:GridColumn Binding="{Binding cNote}"  FieldName="Note" Header="Note" Width="160"/>
-            <dxg:GridColumn Binding="{Binding cDesc}"  FieldName="Description" Header="Description" Width="200"/>
+            <dxg:GridColumn Binding="{Binding currencySymbol}"  FieldName="Symbol"  IsEnabled="False" AllowFocus="False"  Header="" Width="26">
+                <dxg:GridColumn.DisplayTemplate  >
+                    <ControlTemplate >
+                        <TextBlock  x:Name="PART_Editor" FontWeight="Normal" Foreground="#FF0B1AAA" FontSize="9" />
+                    </ControlTemplate>
+                </dxg:GridColumn.DisplayTemplate>
+
+
+            </dxg:GridColumn>
+                
+                
+                
+            <dxg:GridColumn Binding="{Binding cName}"  FieldName="Name" Header="Name" IsEnabled="False" AllowFocus="False" Width="200" />
+
+            <dxg:GridColumn Binding="{Binding cNote}"  FieldName="Note" IsEnabled="False" Header="Note" AllowFocus="False" Width="160"/>
+            <dxg:GridColumn Binding="{Binding cDesc}"  FieldName="Description" Header="Description" AllowFocus="False" Width="200"/>
 
         </dxg:GridControl>
 
@@ -548,7 +561,7 @@
                                     <Setter Property="Background" Value="#FF16574E" />
                                     <Setter Property="Foreground" Value="White" />
                                 </Trigger>-->
-                                
+
                             </Style.Triggers>
                         </Style>
                     </dxg:TableView.RowStyle>
@@ -629,7 +642,7 @@
 
 
 
-            <dxg:GridColumn   Name ="nAccountID_D" FieldName="nAccountID_D" Header="Dr Account" Width="220"  AllowSorting="True" AllowEditing="True" SortOrder="Ascending" SortIndex="0">
+            <dxg:GridColumn   Name ="nAccountID_D" FieldName="nAccountID_D" Header="Dr Account" Width="220"  AllowSorting="True" AllowEditing="True">
                 <dxg:GridColumn.EditSettings>
                     <dxg:LookUpEditSettings  ItemsSource="{Binding Source={StaticResource uSP_getAllAccountsForSplitViewSource}}" AutoPopulateColumns="False" IsPopupAutoWidth="False" ValueMember="ID" DisplayMember="cName" >
                         <dxg:LookUpEditSettings.PopupContentTemplate>
@@ -684,7 +697,7 @@
 
 
 
-            <dxg:GridColumn   FieldName="nAmount_D" Header="Dr Amount" Width="100"  AllowSorting="True" AllowEditing="True"/>
+            <dxg:GridColumn   FieldName="nAmount_D" Header="Dr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=CAD$########.00}" Width="100"  AllowSorting="True" AllowEditing="True" SortOrder="Ascending" SortIndex="0"/>
 
 
             <dxg:GridColumn   Name ="nAccountID_C"  FieldName="nAccountID_C" Header="Cr Account" Width="220"  AllowSorting="True" AllowEditing="True">
@@ -740,7 +753,7 @@
             </dxg:GridColumn>
 
 
-            <dxg:GridColumn  Name="nAmount_C" FieldName="nAmount_C" Header="Cr Amount" Width="100" AllowSorting="True" AllowEditing="True"/>
+            <dxg:GridColumn  Name="nAmount_C" FieldName="nAmount_C" Header="Cr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=c2}" Width="100" AllowSorting="True" AllowEditing="True"/>
 
 
             <dxg:GridColumn   FieldName="nTagID" Header="Tag" Width="220"  AllowSorting="True" AllowEditing="True">
