--- a/CoolBlue/MainWindow.xaml
+++ b/CoolBlue/MainWindow.xaml
@@ -697,7 +697,7 @@
 
 
 
-            <dxg:GridColumn   FieldName="nAmount_D" Header="Dr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=CAD$########.00}" Width="100"  AllowSorting="True" AllowEditing="True" SortOrder="Ascending" SortIndex="0"/>
+            <dxg:GridColumn   FieldName="nAmount_D" Header="Dr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=###########.00}" Width="100"  AllowSorting="True" AllowEditing="True" SortOrder="Ascending" SortIndex="0"/>
 
 
             <dxg:GridColumn   Name ="nAccountID_C"  FieldName="nAccountID_C" Header="Cr Account" Width="220"  AllowSorting="True" AllowEditing="True">
@@ -753,7 +753,7 @@
             </dxg:GridColumn>
 
 
-            <dxg:GridColumn  Name="nAmount_C" FieldName="nAmount_C" Header="Cr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=c2}" Width="100" AllowSorting="True" AllowEditing="True"/>
+            <dxg:GridColumn  Name="nAmount_C" FieldName="nAmount_C" Header="Cr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=###########.00}" Width="100" AllowSorting="True" AllowEditing="True"/>
 
 
             <dxg:GridColumn   FieldName="nTagID" Header="Tag" Width="220"  AllowSorting="True" AllowEditing="True">
@@ -932,8 +932,8 @@
 
 
 
-        <ComboBox Grid.Column="2" Margin="0,0,10,0" Grid.Row="2" IsSynchronizedWithCurrentItem = "True" SelectedItem="" DisplayMemberPath="cName" ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
-        <dx:SimpleButton Content="New Line" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="42,38,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" Click="SimpleButton_Click_1" RenderTransformOrigin="-1.733,0.444"/>
+        <ComboBox Grid.Column="2" Margin="0,48,10,0" Grid.Row="2" IsSynchronizedWithCurrentItem = "True" SelectedItem="" DisplayMemberPath="cLabel" ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
+        <dx:SimpleButton Content="New Transaction" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="1,17,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" Click="SimpleButton_Click_1" RenderTransformOrigin="-1.733,0.444"/>
         <dx:SimpleButton x:Name="btnSaveConfig" Content="Save Config" Grid.Column="4" HorizontalAlignment="Left" Height="34" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="85" Click="btnSaveConfig_Click" Grid.ColumnSpan="2"/>
         <dxe:TextEdit x:Name="TextEditTotalDr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
         <dxe:TextEdit x:Name="TextEditTotalCr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="252,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
