--- a/CoolBlue/MainWindow.xaml
+++ b/CoolBlue/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
         xmlns:local="clr-namespace:coolBlue" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:AccountsDataSetTableAdapters="clr-namespace:coolBlue.AccountsDataSetTableAdapters" xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" xmlns:dxp="http://schemas.devexpress.com/winfx/2008/xaml/printing" x:Class="coolBlue.MainWindow"
-        Title="CoolBlue" Height="1000" Width="1900" Loaded="DXRibbonWindow_Loaded" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF404383" Opacity="0.98" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
+        Title="CoolBlue" Height="1000" Width="1900" Loaded="DXRibbonWindow_Loaded" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF404383" Opacity="0.98" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Closing="DXRibbonWindow_Closing">
     <dxr:DXRibbonWindow.Resources>
 
 
@@ -149,7 +149,7 @@
                     </dxr:RibbonPageGroup>
                 </dxr:RibbonPage>-->
 
-                <dxr:RibbonPage Caption="Home">
+                <dxr:RibbonPage Caption="Home" Name="Home">
                     <dxr:RibbonPageGroup Caption="Program">
                         <dxb:BarButtonItem Content="Exit" ItemClick="Exit_ItemClick" Glyph="{dx:DXImage Image=ColumnsThree_32x32.png}" LargeGlyph="{dx:DXImage Image=CalculateNow_32x32.png}" />
 
@@ -943,10 +943,11 @@
 
 
         <ComboBox Grid.Column="2" Margin="0,48,10,0" Grid.Row="2" IsSynchronizedWithCurrentItem = "True" SelectedItem="" DisplayMemberPath="cLabel" ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
-        <dx:SimpleButton Content="New Transaction" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="1,17,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" Click="SimpleButton_Click_1" RenderTransformOrigin="-1.733,0.444"/>
+        <dx:SimpleButton Name="New"  Content="New Transaction" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="1,17,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" Click="SimpleButton_Click_1" RenderTransformOrigin="-1.733,0.444"/>
         <dxe:TextEdit x:Name="TextEditTotalDr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
         <dxe:TextEdit x:Name="TextEditTotalCr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="252,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
         <dxe:TextEdit x:Name="TextEditBalance" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="336,21,0,0" Grid.Row="11" VerticalAlignment="Top" Width="100" Mask="F" MaskType="Numeric" FontWeight="Normal" Padding="0,0,5,0" Background="Black" Foreground="White"/>
+        <dx:SplitButton Content="SplitButton" Grid.Column="3" HorizontalAlignment="Left" Margin="200,29,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
 </dxr:DXRibbonWindow>
